SDKs/collegefootballdata.com/4.1.6/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    opts := []sdk.SDKOption{
        sdk.WithSecurity(
            shared.Security{
                APIKeyAuth: shared.SchemeAPIKeyAuth{
                    APIKey: "YOUR_API_KEY_HERE",
                },
            }
        ),
    }

    s := sdk.New(opts...)
    
    req := operations.GetLinesRequest{
        QueryParams: operations.GetLinesQueryParams{
            Away: "sit",
            Conference: "voluptas",
            GameID: 6050128673802995827,
            Home: "expedita",
            SeasonType: "consequuntur",
            Team: "dolor",
            Week: 1774932891286980153,
            Year: 6044372234677422456,
        },
    }
    
    res, err := s.Betting.GetLines(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.GameLines != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### betting

* `GetLines` - Betting lines

### coaches

* `GetCoaches` - Coaching records and history

### conferences

* `GetConferences` - Conferences

### draft

* `GetDraftPicks` - List of NFL Draft picks
* `GetNflPositions` - List of NFL positions
* `GetNflTeams` - List of NFL teams

### drives

* `GetDrives` - Drive data and results

### games

* `GetAdvancedBoxScore` - Advanced box scores
* `GetCalendar` - Season calendar
* `GetGameMedia` - Game media information and schedules
* `GetGameWeather` - Game weather information (Patreon only)
* `GetGames` - Games and results
* `GetPlayerGameStats` - Player game stats
* `GetTeamGameStats` - Team game stats
* `GetTeamRecords` - Team records

### metrics

* `GetGamePpa` - Team Predicated Points Added (PPA/EPA) by game
* `GetPlayerGamePpa` - Player Predicated Points Added (PPA/EPA) broken down by game
* `GetPlayerSeasonPpa` - Player Predicated Points Added (PPA/EPA) broken down by season
* `GetPredictedPoints` - Predicted Points (i.e. Expected Points or EP)
* `GetPregameWinProbabilities` - Pregame win probability data
* `GetTeamPpa` - Predicted Points Added (PPA/EPA) data by team
* `GetWinProbabilityData` - Win probability chart data

### players

* `GetPlayerSeasonStats` - Player stats by season
* `GetPlayerUsage` - Player usage metrics broken down by season
* `GetReturningProduction` - Team returning production metrics
* `PlayerSearch` - Search for player information

### plays

* `GetPlayStatTypes` - Types of player play stats
* `GetPlayStats` - Play stats by play
* `GetPlayTypes` - Play types
* `GetPlays` - Play by play data

### rankings

* `GetRankings` - Historical polls and rankings

### ratings

* `GetConferenceSpRatings` - Historical SP+ ratings by conference
* `GetSpRatings` - Historical SP+ ratings
* `GetSrsRatings` - Historical SRS ratings

### recruiting

* `GetRecruitingGroups` - Recruit position group ratings
* `GetRecruitingPlayers` - Player recruiting ratings and rankings
* `GetRecruitingTeams` - Team recruiting rankings and ratings

### stats

* `GetAdvancedTeamGameStats` - Advanced team metrics by game
* `GetAdvancedTeamSeasonStats` - Advanced team metrics by season
* `GetStatCategories` - Team stat categories
* `GetTeamSeasonStats` - Team statistics by season

### teams

* `GetFbsTeams` - FBS team list
* `GetRoster` - Team rosters
* `GetTalent` - Team talent composite rankings
* `GetTeamMatchup` - Team matchup history
* `GetTeams` - Team information

### venues

* `GetVenues` - Arena and venue information

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
